--- a/app/views/static/dashboard.html.slim
+++ b/app/views/static/dashboard.html.slim
@@ -50,8 +50,7 @@
         h5#expenseModalLabel.modal-title Add an expense
         button.btn-close aria-label="Close" data-bs-dismiss="modal" type="button" 
       .modal-body
-        | Fields to be added
+        = render "static/shared/expense_form", expense: @expense
       .modal-footer
         button.btn.btn-secondary data-bs-dismiss="modal" type="button"  Close
-        button.btn.btn-primary type="button"  Save changes
 = render "static/shared/not_friend_list"
