--- a/app/views/static/shared/_aside_bar.html.slim
+++ b/app/views/static/shared/_aside_bar.html.slim
@@ -1,8 +1,9 @@
 aside.side-bar-area
   = link_to "Dashboard", root_path, method: :get, class: 'link-underline-info'
   br
+  = link_to "All expenses", people_path(id: current_user.id), method: :get, class: 'link-underline-info'
   .friends-list
     p.friends-list-header FRIENDS
     - friends.each do |friend|
-      a.friend-name #{friend.name}
+      = link_to friend.name, people_path(id: friend.id), method: :get, class: 'friend-name'
     button.btn.btn-primary type="button" data-bs-toggle="modal" data-bs-target="#friendModal"  Add Friend
